2001-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-forward): New function.

2001-03-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-goto-url): Put cursor at the top of minibuffer.

2001-03-23  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes): Don't check "OK" string in Status-Line.

2001-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-time-parse-string the 2nd): Don't funcall
	`parse-time-string' directly for avoiding compile warning.

	* w3m-hist.el (w3m-history-current): New function.

2001-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el: New file.

2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-time-parse-string): Fix condition to detect
	timezone.el includes bug.

	* w3m-time.el: Removed.

	* w3m.el (TopLevel): Require `timezone' instead of `w3m-time'.
	(w3m-time-parse-string): Use `timezone-fix-time' and spec of
	return value is changed.
	(w3m-time-newer-p): Imported.

	* w3m-antenna.el (w3m-antenna-hns-last-modified): Follow change of
	`w3m-time-parse-string'.

2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* README, README.ja: Update for w3m-0.2.1.

	* Makefile.in (dist, tarball): Fix that some files are not
	included in package.

2001-03-22  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (w3m-goto-url): Insert the current url for input by default.

2001-03-22  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-xmas.el (w3m-update-toolbar): New function.
	(w3m-setup-toolbar): Added docstring.

	* w3m.el (w3m-goto-url): Call `w3m-update-toolbar'.
	(toplevel): Define `w3m-update-toolbar' if it is not bound as function.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-w3m-attributes): Ignore errors while parsing a
	time-string.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Moved generic macros and defsubsts in front of functions.